# pirl-nav-research

./: .gitignore  README.md  ROADMAP.md  pyproject.toml
.github/: pull_request_template.md
codex_tasks/: TASK_00_仓库初始化.md  TASK_01_scenario_specification.md  TASK_01_场景生成器.md  TASK_02_scenario_visualization_gate.md  TASK_02_可视化流水线.md  TASK_03_PyBullet环境.md  TASK_03_pybullet_environment_gate.md  TASK_04_evaluation_pipeline_and_baseline_readiness.md  TASK_04_奖励约束指标.md  TASK_05_baseline_training_and_reproducible_experiments.md  TASK_05_基线方法.md  TASK_06_pirl_nav_method_and_ablation_skeleton.md  TASK_06_完整方法.md  TASK_07_ROS2验证.md  TASK_07_formal_training_visualized_comparative_experiments.md
configs/: README.md
docs/: 00_项目简述.md  01_架构决策.md  02_research_hypotheses.md  02_研究主线.md  03_experimental_protocol.md  03_场景设计.md  04_metrics_contract.md  04_训练策略.md  05_scenario_benchmark.md  05_可视化审查规范.md  06_paper_argument.md  06_评价指标.md  07_Codex_CLI_工作流.md  08_网页端与Codex双重审查.md  09_风险清单.md  10_Gazebo_ROS2验证.md  11_仓库结构.md  12_repository_audit_2026-06-29.md  13_stage1_scenario_audit_2026-06-29.md  15_codex_cli_academic_research_suite.md  17_repository_audit_2026-06-30.md  18_stage2_visualization_audit_2026-06-30.md  19_stage2_human_review_pass_2026-06-30.md  20_stage3_environment_audit_2026-07-01.md  21_stage4_evaluation_audit_2026-07-01.md  22_stage5_baseline_training_audit_2026-07-01.md  23_stage6_pirl_nav_method_audit_2026-07-01.md  24_stage7_formal_training_audit_2026-07-01.md  ARS_SESSION_CONFIG.md
pirl_nav/: __init__.py
scripts/: README.md  evaluate_stage4.py  (+11 more)
(+130 files in other folders)
