[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "pirl-nav"
version = "0.0.0"
description = "Predictive Intent-Risk Constrained Reinforcement Learning for UAV Navigation."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "Proprietary research prototype until a license is selected" }
authors = [
  { name = "PIRL-Nav contributors" }
]
keywords = [
  "uav-navigation",
  "reinforcement-learning",
  "intent-prediction",
  "risk-constrained-rl",
  "safety-shield"
]
dependencies = []

[project.optional-dependencies]
dev = [
  "pytest>=8.0",
  "pyyaml>=6.0",
  "ruff>=0.5",
  "mypy>=1.10"
]
prototype = [
  "numpy>=1.26",
  "pyyaml>=6.0",
  "gymnasium>=0.29",
  "pybullet>=3.2"
]

[tool.setuptools.packages.find]
include = ["pirl_nav*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP"]
ignore = []

[tool.mypy]
python_version = "3.10"
packages = ["pirl_nav"]
ignore_missing_imports = true
strict = false
